--- a/src/index.css
+++ b/src/index.css
@@ -54,8 +54,9 @@ a:hover {
 body,
 html {
   margin: 0;
-  min-width: 100vw;
-  min-height: 100vh;
+  width: 100vw;
+  height: 100vh;
+  /* overflow: hidden; */
   font-family: "Inter", sans-serif;
   /* background: linear-gradient(to bottom right, #9747ff 2%, #3165A1 40%, #ffffff); */
 }
